# CareerSim-BDCI26

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
career_sim_runner/: __init__.py  __main__.py  cli.py  constants.py  db.py  headless_play.py  install.py  mcp_config.py  models.py  paths.py  replay.py  report.py  score.py  setup.py  skill_contract.py  transcript.py  utils.py  validate.py  ws_client.py
career_sim_runner/prompts/: identity.md  play_headless.md  play_headless_continue.md  play_headless_extra.md
career_sim_runner/replay/: __init__.py  live.py  models.py  parse.py  render.py  usage.py
solution/: manifest.json
tests/: test_headless_play.py  test_install.py  test_replay.py  test_score.py  test_setup.py  test_skill_contract.py  test_transcript.py  test_validate.py  test_ws_client.py
tests/fixtures/solution/: README.md  manifest.json
tests/fixtures/solution/design/: skills_design.md
tests/fixtures/solution/skills/dummy-skill/: SKILL.md
